--- a/faq.html
+++ b/faq.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title style="font-family:Impact;">Título de la página</title>
+  <title style="font-family:Impact;">cafeteria</title>
 </head>
 <body bgcolor="#8de0a4" style="font-family:Arial;">
 <h1>FAQ</h1>
 <ul>
-<li>Pregunta<br>Respuesta</li>
-<li>Pregunta<br>Respuesta</li>
-<li>Pregunta<br>Respuesta</li>
-<li>Pregunta<br>Respuesta</li>
-<li>Pregunta<br>Respuesta</li>
+<li>¿cuales son horarios de la cafeteria?<br>abrimos de lunes a sabado de 8:00 am a 9:00 pm </li>
+<li>¿tienes opciones para personas veganas o con intolerancia a la lactosa?<br>si, contamos con leches vegetales y opciones veganas en reposteria</li>
+<li>¿se pueden hacer pedidos para llevar?<br>si, se pueden hacer pedidos para llevar directamente en el mostrador</li>
+<li>¿cuentan con servicio Wi-Fi?<br>si, ofrecemos Wi-Fi gratuito para nuestros clientes en consumo en mesa</li>
+<li>¿aceptan pagos con tarjeta?<br>si, aceptamos todas las targetas de debito y credito, asi como pagos por transferencias+</li>
 </ul><br>
 <a href="link del index">Indice</a>
 </body>
