--- a/politica.html
+++ b/politica.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title style="font-family:Impact;">Título de la página</title>
+  <title style="font-family:Impact;">cafeteria proyecto</title>
 </head>
 <body bgcolor="#8de0a4" style="font-family:Arial;">
 <h1>Politica de Calidad</h1>
-<p>texto aburrido</p>
+<p>nos comprometemos a ofrecer productos frescos y de primer calidad,preparados con los mas altos estandares de higiene y sabor. Garantizamos un servicio eficiente y cordial, buscando la mejora continua para superar las expectativas de nuestros clientes</p>
 <br><a href="link del index">Indice</a>
 </body>
 </html>
