--- a/vision.html
+++ b/vision.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title style="font-family:Impact;">Título de la página</title>
+  <title style="font-family:Impact;">cafeteria proyecto</title>
 </head>
 <body bgcolor="#8de0a4" style="font-family:Arial;">
 <h1>Vision</h1>
-<p>texto aburrido</p>
+<p>ser la cafeteria preferida de la comunidad, reconocida por la exelencia de nuestros productos, la innovacion de bebidas y un ambiente que inspire momentos especiales y memorables.</p>
 <br><a href="link del index">Indice</a>
 </body>
 </html>
