--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <p>una cafeteria es muvho mas de un lugar donde se va a tomar cafe; es un espacio de encuentro, descanso y convivencia. nuestro negocio busca ofrecer a la comunidad un ambiente acogedor y moderno donde los clientes puedan disfrutar de cafe de alta calidad, bebidas especializadas y reposteria. ademas se convierte en un punto de reunion ideal para trabajar, estudiar o simplemente relajarse.</p>
   <h2 style="font-family:Impact;">Indice</h2>
   <ul style="display:inline-block; text-align:left;">
-    <li><a href="Link de la pagina">Inicio</a></li>
-    <li><a href="Link de la pagina">Mision</a></li>
-    <li><a href="Link de la pagina">Vision</a></li>
-    <li><a href="Link de la pagina">Politica de Calidad</a></li>
-    <li><a href="Link de la pagina">FAQ</a></li>
+    <li><a href="https://cafeteriaprject.netlify.app/">Inicio</a></li>
+    <li><a href="https://cafeteriaprject.netlify.app/mision.html">Mision</a></li>
+    <li><a href="https://cafeteriaprject.netlify.app/vision.html">Vision</a></li>
+    <li><a href="https://cafeteriaprject.netlify.app/politica.html">Politica de Calidad</a></li>
+    <li><a href="https://cafeteriaprject.netlify.app/faq.html">FAQ</a></li>
   </ul>
 </body>
 </html>
