--- a/faq.html
+++ b/faq.html
@@ -14,6 +14,6 @@
 <li>¿cuentan con servicio Wi-Fi?<br>si, ofrecemos Wi-Fi gratuito para nuestros clientes en consumo en mesa</li>
 <li>¿aceptan pagos con tarjeta?<br>si, aceptamos todas las targetas de debito y credito, asi como pagos por transferencias+</li>
 </ul><br>
-<a href="link del index">Indice</a>
+<a href="https://cafeteriaprject.netlify.app/">Indice</a>
 </body>
 </html>
