--- a/mision.html
+++ b/mision.html
@@ -8,6 +8,6 @@
 <body bgcolor="#8de0a4" style="font-family:Arial;">
 <h1>Mision</h1>
 <p>brindar a nuestros clientes una experiencia unica a traves de cafe de alta calidad, ambiente acogedor y servicio amable, creando un espacio donde se fomente la convivencia y el distrute de cada taza</p>
-<br><a href="link del index">Indice</a>
+<br><a href="https://cafeteriaprject.netlify.app/">Indice</a>
 </body>
 </html>
