--- a/politica.html
+++ b/politica.html
@@ -8,6 +8,6 @@
 <body bgcolor="#8de0a4" style="font-family:Arial;">
 <h1>Politica de Calidad</h1>
 <p>nos comprometemos a ofrecer productos frescos y de primer calidad,preparados con los mas altos estandares de higiene y sabor. Garantizamos un servicio eficiente y cordial, buscando la mejora continua para superar las expectativas de nuestros clientes</p>
-<br><a href="link del index">Indice</a>
+<br><a href="https://cafeteriaprject.netlify.app/">Indice</a>
 </body>
 </html>
