--- a/vision.html
+++ b/vision.html
@@ -8,6 +8,6 @@
 <body bgcolor="#8de0a4" style="font-family:Arial;">
 <h1>Vision</h1>
 <p>ser la cafeteria preferida de la comunidad, reconocida por la exelencia de nuestros productos, la innovacion de bebidas y un ambiente que inspire momentos especiales y memorables.</p>
-<br><a href="link del index">Indice</a>
+<br><a href="https://cafeteriaprject.netlify.app/">Indice</a>
 </body>
 </html>
