--- a/mision.html
+++ b/mision.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title style="font-family:Impact;">cafeteria proyecto</title>
+  <title style="font-family:Impact;">Título de la página</title>
 </head>
 <body bgcolor="#8de0a4" style="font-family:Arial;">
 <h1>Mision</h1>
-<p>brindar a nuestros clientes una experiencia unica a traves de cafe de alta calidad, ambiente acogedor y servicio amable, creando un espacio donde se fomente la convivencia y el distrute de cada taza</p>
-<br><a href="https://cafeteriaprject.netlify.app/">Indice</a>
+<p>texto aburrido aquí cambias el texto</p>
+<br><a href="link del index">Indice</a>
 </body>
 </html>
