--- a/rickroll.html
+++ b/rickroll.html
@@ -6,8 +6,7 @@
   <title style="font-family:Impact;">Título de la página</title>
 </head>
 <body bgcolor="#8de0a4" style="font-family:Arial;">
-<h1>Mision</h1>
-<p>texto aburrido aquí cambias el texto</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=Q5ft_DhQjQFkwVhi&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br><a href="link del index">Indice</a>
 </body>
 </html>
