--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('siuu.jpg');
+      background-image: url('siuuu.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
