--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cafetería Proyecto</title>
+  body{
+  margin:0;
+  font-family:Arial, sans.serif;
+  background: liner-gradient (135deg, #a2d2ff, #bde0fe);
+  display: flex;
+  justify-content: center;
+  aling-items: center;
+  height: 100vh;
+  text-align: center;
+  }
 </head>
 <body>
   <h1>Cafetería</h1>
