--- a/index.html
+++ b/index.html
@@ -3,37 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cafetería Proyecto</title>
-  <style>
-    body{
-      margin:0;
-      font-family:Arial, sans.serif;
-      background: liner-gradient (135deg, #a2d2ff, #bde0fe);
-      display: flex;
-      justify-content: center;
-      aling-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-  </style>
+  <title style="font-family:Impact;">Título de la página</title>
 </head>
-<body>
-  <h1>Cafetería</h1>
-
-
-  <p>
-    Una cafetería es mucho más que un lugar donde se va a tomar café; es un espacio de encuentro, descanso y convivencia.
-    Nuestro negocio busca ofrecer a la comunidad un ambiente acogedor y moderno donde los clientes puedan disfrutar de café de alta calidad,
-    bebidas especializadas y repostería. Además, se convierte en un punto de reunión ideal para trabajar, estudiar o simplemente relajarse.
-  </p>
-
-  <h2>Índice</h2>
-  <ul>
-    <li><a href="https://cafeteriaprject.netlify.app/">Inicio</a></li>
-    <li><a href="https://cafeteriaprject.netlify.app/mision.html">Misión</a></li>
-    <li><a href="https://cafeteriaprject.netlify.app/vision.html">Visión</a></li>
-    <li><a href="https://cafeteriaprject.netlify.app/politica.html">Política de Calidad</a></li>
-    <li><a href="https://cafeteriaprject.netlify.app/faq.html">FAQ</a></li>
+<body bgcolor="#8de0a4" style="font-family:Arial;" align="center">
+  <h1 style="font-family:Impact;">Nombre de la pagina</h1>
+  <img src="Ruta a la imagen" width="200px" height="200px"></img><br>
+  <p>Texto perrón de introducciondea Axel</p>
+  <h2 style="font-family:Impact;">Indice</h2>
+  <ul style="display:inline-block; text-align:left;">
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="mision.html">Mision</a></li>
+    <li><a href="vision.html">Vision</a></li>
+    <li><a href="politica.html">Politica de Calidad</a></li>
+    <li><a href="faq.html">FAQ</a></li>
   </ul>
 </body>
 </html>
