--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title style="font-family:Impact;">Título de la página</title>
+  <title style="font-family:Impact;">EL REFUGIO DEL CAFE</title>
 </head>
 <body bgcolor="#8de0a4" style="font-family:Arial;" align="center">
-  <h1 style="font-family:Impact;">Nombre de la pagina</h1>
+  <h1 style="font-family:Impact;">AZUCENITA</h1>
   <img src="Ruta a la imagen" width="200px" height="200px"></img><br>
-  <p>Texto perrón de introducciondea Axel</p>
+  <p>leelo si no me voy a sentir mal</p>
   <h2 style="font-family:Impact;">Indice</h2>
   <ul style="display:inline-block; text-align:left;">
     <li><a href="index.html">Inicio</a></li>
