--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title style="font-family:Impact;">EL REFUGIO DEL CAFE</title>
 </head>
-<body bgcolor="#8de0a4" style="font-family:Arial;" align="center">
-  <h1 style="font-family:Impact;">EL REFIGIO DEL CAFE</h1>
+<body bgcolor="#8de0a5" style="font-family:Arial;" align="center">
+  <h1 style="font-family:Impact;">EL REFUGIO DEL CAFE</h1>
   <img src="Ruta a la imagen" width="200px" height="200px"></img><br>
   <p>leelo si no me voy a sentir mal</p>
   <h2 style="font-family:Impact;">Indice</h2>
