--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#A0522D" style="font-family:Arial;" align="center">
   <h1 style="font-family:Impact;">EL REFUGIO DEL CAFE</h1>
-  <img src="Ruta a la imagen" width="200px" height="200px"></img><br>
+  <img src="https://th.bing.com/th/id/R.dc5aa97de3374b6456a215232a68ad56?rik=En7KanOyt6ZmVg&riu=http%3a%2f%2fimages4.wikia.nocookie.net%2f__cb20070701130640%2fpowerrangers%2fimages%2f3%2f33%2fSPD_B_Squad.jpg&ehk=VKqnRXoS7ejuSqleMfZWW02qALBIKqpYMrFyVjMy1mY%3d&risl=&pid=ImgRaw&r=0" width="200px" height="200px"></img><br>
   <p>leelo si no me voy a sentir mal</p>
   <h2 style="font-family:Impact;">Indice</h2>
   <ul style="display:inline-block; text-align:left;">
